New api, delete host and modify hostname for monitor system
